ourstory text overlap issue fix

--- a/src/ourstory/ourstory.css
+++ b/src/ourstory/ourstory.css
@@ -127,7 +127,7 @@
 
 .ourmissioncontainer3 {
   width: 100vw;
-  height: 16vh;
+  height: 300px;
   text-align: center;
   font-family: FuturaBT;
   font-size: 16px;
